2005-08-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: GladeXML.new finds GETTEXT_PATH environment variable
	if the localedir is nil. If it's not set, then use system path
	(e.g. /usr/share/locale).

2005-08-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* bin/ruby-glade-create-template: Fix to output uniq signal handlers.
	Improved GetText.n_.

2005-02-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Support libintl.h on mswin32.
	* sample/makemo.rb: Support mswin32.
	* sample/l10n_main.rb: Fix a bug in ja locale.

2005-02-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Re-check libintl function again(ad-hoc).
	* sample/l10n_gui.rb, l10n_main.rb: 
	Rewrite from new ruby-glade-create-template.
	* bin/ruby-glade-create-template: Improved GetText support.
	* README: Updated.

2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix intl.h error on MSVC++.
	* rbglade.c: Remove to check libintl functions.
	
2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2005-01-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Fix compiling error on MSVC+.

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/libglade2.rb: Support GLib::Log.set_log_domain.
	Define GladeXML::LOG_DOMAIN.

2004-08-07  Masao Mutoh  <mutoh@highway.ne.jp>

	* README: Revised.
	* rbglade.c: Added GladeXML#get_tooltips.
	* bin/ruby-glade-create-tmplate: Improved to support Gnome::App 
	and Tooltips and L10n.

2004-07-11  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/README, l10n*, makemo.rb, po/*: Added.

2004-07-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Accept locale-dir as an argument of GladeXML.new.

2004-07-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Support localedir as an argument of GladeXML.new.
	* bin/ruby-glade-create-template: Created class requires all arguments 
	of GladeXML.new. 

2004-05-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbglade.c: Avoid a memory leak. 
