@@ -1,59 +1,25 @@
 #!/usr/bin/env ruby
-=begin
-  l10n_gui.rb - Ruby/Libglade2 sample script.
-
-  This sample is auto-generated by ruby-glade-create-template
-  except header part.
-
-  Usually, YOU DON'T NEED TOUCH THIS.
-
-  Copyright (c) 2004,2005 Ruby-GNOME2 Project
-  This program is licenced under the same licence as Ruby-GNOME2.
-
-  $Id: l10n_gui.rb,v 1.2 2005/02/12 04:10:52 mutoh Exp $
-=end
-
+#
+# This file is gererated by ruby-glade-create-template 1.1.2.
+#
 require 'libglade2'
-
-# Support L10n (Requires RAA:Ruby-GetText-Package)
-begin
-  require 'gettext'
-rescue LoadError
-  unless defined? GetText
-    module GetText
-      module_function
-      def _(msgid); msgid; end
-      def N_(msgid); msgid; end
-      def n_(msgid, msgid_plural, n)
-	msgid
-      end
-      def s_(msgid, div = '|')
-	if index = msgid.rindex(div)
-	  msgid = msgid[(index + 1)..-1]
-	else
-	  msgid
-	end
-      end
-      def bindtextdomain(domainname, path = nil, locale = nil, charset = nil)
-      end
-    end
-  end
-end
 
 class L10nGlade
   include GetText
+
+  attr :glade
   
   def initialize(path_or_data, root = nil, domain = nil, localedir = nil, flag = GladeXML::FILE)
-    GetText.bindtextdomain(domain, localedir, nil, "UTF-8")
+    bindtextdomain(domain, localedir, nil, "UTF-8")
     @glade = GladeXML.new(path_or_data, root, domain, localedir, flag) {|handler| method(handler)}
     
   end
   
-  def on_hello_button_clicked(widget)
-    puts "on_hello_button_clicked() is not implemented yet."
-  end
   def on_window1_destroy_event(widget, arg0)
     puts "on_window1_destroy_event() is not implemented yet."
+  end
+  def on_hello_button_clicked(widget)
+    puts "on_hello_button_clicked() is not implemented yet."
   end
   def on_exit_button_clicked(widget)
     puts "on_exit_button_clicked() is not implemented yet."
