@@ -10,7 +10,7 @@
   Copyright (c) 2004,2005 Ruby-GNOME2 Project
   This program is licenced under the same licence as Ruby-GNOME2.
 
-  $Id: l10n_main.rb,v 1.3 2005/02/22 05:50:31 mutoh Exp $
+  $Id: l10n_main.rb,v 1.4 2005/09/19 14:05:21 mutoh Exp $
 =end
 
 #
@@ -18,16 +18,23 @@
 # You don't need touch here.
 #
 require 'l10n_gui'
-require 'gettext'
  
-# Set values as your own application. 
-PROG_PATH = "l10n.glade"
-PROG_NAME = "l10n"
-LOCALE_DIR = "locale"
-
 class L10n < L10nGlade
   include GetText
-  GetText.bindtextdomain(PROG_NAME, LOCALE_DIR, nil, "UTF-8")
+
+  # Set values as your own application. 
+  PROG_PATH = "l10n.glade"
+  PROG_NAME = "l10n"
+  LOCALE_DIR = "locale"
+
+  def initialize
+    super(PROG_PATH, nil, PROG_NAME, LOCALE_DIR)
+    # bind a textdomain to this file(you need to write this in each files).
+    bindtextdomain(PROG_NAME, LOCALE_DIR, nil, "UTF-8")
+    # :
+    # Write your own code for initialization.
+    # :
+  end
 
   def on_hello_button_clicked(widget)
     @glade["entry"].text = _("Hello World")
@@ -43,5 +50,5 @@ class L10n < L10nGlade
 end
 
 Gtk.init 
-L10n.new(PROG_PATH, nil, PROG_NAME, LOCALE_DIR)
+L10n.new
 Gtk.main
